--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -6,6 +6,16 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp">
 
+    <ImageButton
+        android:id="@+id/reply_button"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvUserName"
+        android:layout_marginEnd="13dp"
+        android:background="@drawable/ic_reply"
+        app:srcCompat="@drawable/ic_reply" />
+
     <ImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="50dp"
@@ -41,13 +51,15 @@
         android:layout_marginStart="128dp"
         android:text="TextView" />
 
+
     <Button
-        android:id="@+id/reply_button"
-        android:layout_width="75dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/tvUserName"
-        android:layout_marginEnd="13dp"
-        android:text="Reply" />
+        android:id="@+id/detail_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/tvUserName" />
+
+
 
 </RelativeLayout>
