--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,6 +31,7 @@
         android:id="@+id/favorite_button"
         style="@android:style/Widget.ImageButton"
         android:layout_width="wrap_content"
+        android:onClick="favorite"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvBody"
         android:layout_centerHorizontal="true"
