--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -6,26 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.apps.restclienttemplate.TimelineActivity">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipeContainer"
-        android:layout_width="344dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvTweet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+<fragment
+    android:id="@+id/fragment_timeline"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    class="com.codepath.apps.restclienttemplate.fragments.HomeTimelineFragment"/>
 
 </RelativeLayout>
