--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -30,6 +30,7 @@
         android:layout_toEndOf="@+id/ivProfileImage"
         android:layout_below="@+id/tvUserName"
         android:layout_marginLeft="5dp"
+        android:autoLink="web"
         android:text="TextView" />
 
     <TextView
