--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -51,14 +51,25 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/tvUserName" />
 
+    <!--<ImageButton-->
+        <!--android:id="@+id/reply_button"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_below="@+id/tvUserName"-->
+        <!--android:layout_marginEnd="13dp"-->
+        <!--app:srcCompat="@drawable/ic_reply" />-->
+
     <ImageButton
         android:id="@+id/reply_button"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/tvUserName"
         android:layout_marginEnd="13dp"
-        app:srcCompat="@drawable/ic_reply" />
+        android:background="@null"
+        android:scaleType="fitXY"
+        app:srcCompat="@mipmap/ic_reply" />
 
 
 </RelativeLayout>
